<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_40_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4" />

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/category"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dgDivider"
        style="@style/Divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTitle" />

    <TextView
        android:id="@+id/catIssueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/issue_date"
        app:layout_constraintBottom_toBottomOf="@+id/dgHashDivider"
        app:layout_constraintEnd_toStartOf="@+id/v_40_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dgDivider" />

    <TextView
        android:id="@+id/catIssueDateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dash"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v_40_4"
        app:layout_constraintTop_toBottomOf="@+id/dgDivider" />

    <View
        android:id="@+id/dgHashDivider"
        style="@style/Divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catIssueDateText" />

    <TextView
        android:id="@+id/catExpDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/expiry_date"
        app:layout_constraintBottom_toBottomOf="@+id/dgCalculatedDivider"
        app:layout_constraintEnd_toStartOf="@+id/v_40_4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dgHashDivider" />

    <TextView
        android:id="@+id/catExpDateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dash"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/v_40_4"
        app:layout_constraintTop_toBottomOf="@+id/dgHashDivider" />

    <View
        android:id="@+id/dgCalculatedDivider"
        style="@style/Divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catExpDateText" />

    <TextView
        android:id="@+id/catExtra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/extra"
        app:layout_constraintBottom_toTopOf="@+id/dgValidatedDivider"
        app:layout_constraintEnd_toStartOf="@+id/v_40_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dgCalculatedDivider" />

    <TextView
        android:id="@+id/catExtraText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dash"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v_40_4"
        app:layout_constraintTop_toBottomOf="@+id/dgCalculatedDivider" />

    <View
        android:id="@+id/dgValidatedDivider"
        style="@style/Divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catExtraText" />
</androidx.constraintlayout.widget.ConstraintLayout>